[gd_scene load_steps=11 format=2]

[ext_resource path="res://ressources/font/Storm Gust.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scene/other/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://ressources/Object/IdleLoop-Sheet.png" type="Texture" id=3]
[ext_resource path="res://script/Scene/MainMenu.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1922.0
margin_bottom = 1080.0
color = Color( 0.109804, 0.109804, 0.109804, 1 )

[node name="OptionsMenu" type="Control" parent="."]
margin_right = 1924.0
margin_bottom = 1078.0

[node name="LevelMenu" type="Control" parent="."]
margin_right = 1924.0
margin_bottom = 1078.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 668, 125 )
scale = Vector2( 2, 2 )
frames = SubResource( 6 )
playing = true

[node name="Label" type="Label" parent="."]
margin_left = -3.0
margin_top = 5.0
margin_right = 1914.0
margin_bottom = 365.0
custom_fonts/font = SubResource( 1 )
text = "IN  THE  DARK"
align = 1
valign = 1
autowrap = true

[node name="Play" type="Button" parent="."]
margin_left = 704.0
margin_top = 384.0
margin_right = 1216.0
margin_bottom = 471.0
custom_fonts/font = ExtResource( 2 )
text = "Play"

[node name="Level" type="Button" parent="."]
margin_left = 704.0
margin_top = 512.0
margin_right = 1215.0
margin_bottom = 599.0
custom_fonts/font = ExtResource( 2 )
text = "Levels"

[node name="Options" type="Button" parent="."]
margin_left = 704.0
margin_top = 640.0
margin_right = 1215.0
margin_bottom = 727.0
custom_fonts/font = ExtResource( 2 )
text = "Options"

[node name="Quit" type="Button" parent="."]
margin_left = 704.0
margin_top = 768.0
margin_right = 1215.0
margin_bottom = 855.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Level" to="." method="_on_Level_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
